Exploracion, clase 10 añadidas

--- a/DsClases/DS_Clase_02_Python.ipynb
+++ b/DsClases/DS_Clase_02_Python.ipynb
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -386,11 +386,19 @@
     "id": "g6o0UHSbPuZu",
     "outputId": "817050b9-41be-4d84-debc-497d357ff933"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correcto!\n"
+     ]
+    }
+   ],
    "source": [
     "numero = '5'\n",
     "\n",
-    "numero = COMPLETAR\n",
+    "numero = float(numero)\n",
     "\n",
     "if type(numero) is float:\n",
     "    print('Correcto!')\n",
@@ -672,21 +680,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "4K9QTbTMT8gE"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El gran gran gran gran gran castillo mide 50 metros.\n"
+     ]
+    }
+   ],
    "source": [
     "txt1 = 'gran '\n",
     "txt2 = 'El '\n",
-    "tet3 = 'mide '\n",
+    "txt3 = 'mide '\n",
     "txt4 = ' metros.'\n",
+    "txt5 = 'castillo '\n",
     "numero = 50\n",
     "\n",
-    "frase = COMPLETAR\n",
+    "frase = txt2 + txt1 * 5 + txt5 + txt3 + str(numero) + txt4\n",
     "print(frase)"
    ]
   },
@@ -1576,7 +1593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1585,12 +1602,14 @@
        "0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "False + False"
+   ]
   },
   {
    "cell_type": "markdown",
