--- a/DsClases/Feature+engineering.ipynb
+++ b/DsClases/Feature+engineering.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "8      espinaca        6.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
        "8      espinaca        6.0      NaN"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
        "Categories (4, interval[int64]): [(18, 25] < (25, 35] < (35, 60] < (60, 100]]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,20 +737,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[  nan,    0.,   98.],\n",
-       "       [   3.,    7.,   99.],\n",
-       "       [   3.,    5.,  210.],\n",
-       "       [   4.,   nan,  202.],\n",
-       "       [   8.,    8.,  101.]])"
+       "array([[ nan,   0.,  98.],\n",
+       "       [  3.,   7.,  99.],\n",
+       "       [  3.,   5., 210.],\n",
+       "       [  4.,  nan, 202.],\n",
+       "       [  8.,   8., 101.]])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,9 +768,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/yoel.estrada/miniconda3/envs/acamica/lib/python3.7/site-packages/sklearn/utils/deprecation.py:66: DeprecationWarning: Class Imputer is deprecated; Imputer was deprecated in version 0.20 and will be removed in 0.22. Import impute.SimpleImputer from sklearn instead.\n",
+      "  warnings.warn(msg, category=DeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "imp = Imputer(strategy='mean')\n",
     "X2 = imp.fit_transform(X)"
@@ -778,20 +787,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[   4.5,    0. ,   98. ],\n",
-       "       [   3. ,    7. ,   99. ],\n",
-       "       [   3. ,    5. ,  210. ],\n",
-       "       [   4. ,    5. ,  202. ],\n",
-       "       [   8. ,    8. ,  101. ]])"
+       "array([[  4.5,   0. ,  98. ],\n",
+       "       [  3. ,   7. ,  99. ],\n",
+       "       [  3. ,   5. , 210. ],\n",
+       "       [  4. ,   5. , 202. ],\n",
+       "       [  8. ,   8. , 101. ]])"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,9 +818,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/yoel.estrada/miniconda3/envs/acamica/lib/python3.7/site-packages/sklearn/utils/deprecation.py:66: DeprecationWarning: Class Imputer is deprecated; Imputer was deprecated in version 0.20 and will be removed in 0.22. Import impute.SimpleImputer from sklearn instead.\n",
+      "  warnings.warn(msg, category=DeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.preprocessing import StandardScaler\n",
@@ -822,20 +840,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[  nan,    0.,   98.],\n",
-       "       [   3.,    7.,   99.],\n",
-       "       [   3.,    5.,  210.],\n",
-       "       [   4.,   nan,  202.],\n",
-       "       [   8.,    8.,  101.]])"
+       "array([[ nan,   0.,  98.],\n",
+       "       [  3.,   7.,  99.],\n",
+       "       [  3.,   5., 210.],\n",
+       "       [  4.,  nan, 202.],\n",
+       "       [  8.,   8., 101.]])"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,17 +864,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Pipeline(memory=None,\n",
-       "     steps=[('imputer', Imputer(axis=0, copy=True, missing_values='NaN', strategy='mean', verbose=0)), ('standardscaler', StandardScaler(copy=True, with_mean=True, with_std=True))])"
+       "         steps=[('imputer',\n",
+       "                 Imputer(axis=0, copy=True, missing_values='NaN',\n",
+       "                         strategy='mean', verbose=0)),\n",
+       "                ('standardscaler',\n",
+       "                 StandardScaler(copy=True, with_mean=True, with_std=True))],\n",
+       "         verbose=False)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +903,7 @@
        "       [ 1.89814151,  1.08821438, -0.78355076]])"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
