--- a/Plan111milTP/Plan111mil.ipynb
+++ b/Plan111milTP/Plan111mil.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,242 +54,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>dni_alumno</th>\n",
-       "      <th>apellido_alumno</th>\n",
-       "      <th>nombre_alumno</th>\n",
-       "      <th>provincia_examen</th>\n",
-       "      <th>id_provincia</th>\n",
-       "      <th>localidad</th>\n",
-       "      <th>sede_nombre</th>\n",
-       "      <th>sede_direccion</th>\n",
-       "      <th>llamado_certificacion</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>966</td>\n",
-       "      <td>16912142</td>\n",
-       "      <td>Salcedo</td>\n",
-       "      <td>Norma Noemi</td>\n",
-       "      <td>Ciudad Autónoma de Buenos Aires</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Monserrat</td>\n",
-       "      <td>Universidad Caece</td>\n",
-       "      <td>Av. de Mayo 866</td>\n",
-       "      <td>abr-18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1004</td>\n",
-       "      <td>37556388</td>\n",
-       "      <td>Sivilotti</td>\n",
-       "      <td>Pablo Andres</td>\n",
-       "      <td>Ciudad Autónoma de Buenos Aires</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Villa Crespo</td>\n",
-       "      <td>I.F.T.S. N° 20</td>\n",
-       "      <td>Gurruchaga 739</td>\n",
-       "      <td>abr-18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1005</td>\n",
-       "      <td>95463330</td>\n",
-       "      <td>Pineda</td>\n",
-       "      <td>Maria Gabriela</td>\n",
-       "      <td>Ciudad Autónoma de Buenos Aires</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Villa Crespo</td>\n",
-       "      <td>I.F.T.S. N° 20</td>\n",
-       "      <td>Gurruchaga 739</td>\n",
-       "      <td>abr-18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1006</td>\n",
-       "      <td>36825400</td>\n",
-       "      <td>Tazzioli</td>\n",
-       "      <td>Jonathan Alejandro</td>\n",
-       "      <td>Ciudad Autónoma de Buenos Aires</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Villa Crespo</td>\n",
-       "      <td>I.F.T.S. N° 20</td>\n",
-       "      <td>Gurruchaga 739</td>\n",
-       "      <td>abr-18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1007</td>\n",
-       "      <td>38788069</td>\n",
-       "      <td>Gonzalez</td>\n",
-       "      <td>Alexis Gaston</td>\n",
-       "      <td>Ciudad Autónoma de Buenos Aires</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Villa Crespo</td>\n",
-       "      <td>I.F.T.S. N° 20</td>\n",
-       "      <td>Gurruchaga 739</td>\n",
-       "      <td>abr-18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1054</td>\n",
-       "      <td>41265390</td>\n",
-       "      <td>Fullone</td>\n",
-       "      <td>Agustin Ezequiel</td>\n",
-       "      <td>Córdoba</td>\n",
-       "      <td>14</td>\n",
-       "      <td>Córdoba</td>\n",
-       "      <td>Universidad Nacional de Córdoba</td>\n",
-       "      <td>Av. Vélez Sarsfield 1611</td>\n",
-       "      <td>oct-17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1846</td>\n",
-       "      <td>25320290</td>\n",
-       "      <td>Barrios</td>\n",
-       "      <td>Daniel Roberto</td>\n",
-       "      <td>Tucumán</td>\n",
-       "      <td>90</td>\n",
-       "      <td>Concepción</td>\n",
-       "      <td>Escuela Técnica N° 1 de Concepción</td>\n",
-       "      <td>Nasif Estefano 100 y Shipton</td>\n",
-       "      <td>oct-17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1845</td>\n",
-       "      <td>39140811</td>\n",
-       "      <td>Gramajo</td>\n",
-       "      <td>Facundo Gonzalo</td>\n",
-       "      <td>Tucumán</td>\n",
-       "      <td>90</td>\n",
-       "      <td>Concepción</td>\n",
-       "      <td>Escuela Técnica N° 1 de Concepción</td>\n",
-       "      <td>Nasif Estefano 100 y Shipton</td>\n",
-       "      <td>oct-17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1203</td>\n",
-       "      <td>39022886</td>\n",
-       "      <td>Caminos Picco</td>\n",
-       "      <td>Albano Ezequiel</td>\n",
-       "      <td>Córdoba</td>\n",
-       "      <td>14</td>\n",
-       "      <td>Dean Funes</td>\n",
-       "      <td>I.P.E.T. y A. N °53 \"Fray Luis Beltrán\"</td>\n",
-       "      <td>Av. Fray Luís Beltran 300</td>\n",
-       "      <td>oct-17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>509</td>\n",
-       "      <td>36191404</td>\n",
-       "      <td>Fernandez</td>\n",
-       "      <td>Fernando</td>\n",
-       "      <td>Chaco</td>\n",
-       "      <td>22</td>\n",
-       "      <td>Resistencia</td>\n",
-       "      <td>UTN Facultad Regional Resistencia</td>\n",
-       "      <td>French 414</td>\n",
-       "      <td>oct-17</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1933 rows × 9 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "      dni_alumno apellido_alumno       nombre_alumno  \\\n",
-       "966     16912142         Salcedo         Norma Noemi   \n",
-       "1004    37556388       Sivilotti        Pablo Andres   \n",
-       "1005    95463330          Pineda      Maria Gabriela   \n",
-       "1006    36825400        Tazzioli  Jonathan Alejandro   \n",
-       "1007    38788069        Gonzalez       Alexis Gaston   \n",
-       "...          ...             ...                 ...   \n",
-       "1054    41265390         Fullone    Agustin Ezequiel   \n",
-       "1846    25320290         Barrios      Daniel Roberto   \n",
-       "1845    39140811         Gramajo     Facundo Gonzalo   \n",
-       "1203    39022886   Caminos Picco     Albano Ezequiel   \n",
-       "509     36191404       Fernandez            Fernando   \n",
-       "\n",
-       "                     provincia_examen  id_provincia     localidad  \\\n",
-       "966   Ciudad Autónoma de Buenos Aires             2     Monserrat   \n",
-       "1004  Ciudad Autónoma de Buenos Aires             2  Villa Crespo   \n",
-       "1005  Ciudad Autónoma de Buenos Aires             2  Villa Crespo   \n",
-       "1006  Ciudad Autónoma de Buenos Aires             2  Villa Crespo   \n",
-       "1007  Ciudad Autónoma de Buenos Aires             2  Villa Crespo   \n",
-       "...                               ...           ...           ...   \n",
-       "1054                          Córdoba            14       Córdoba   \n",
-       "1846                          Tucumán            90    Concepción   \n",
-       "1845                          Tucumán            90    Concepción   \n",
-       "1203                          Córdoba            14    Dean Funes   \n",
-       "509                             Chaco            22   Resistencia   \n",
-       "\n",
-       "                                  sede_nombre                sede_direccion  \\\n",
-       "966                         Universidad Caece               Av. de Mayo 866   \n",
-       "1004                           I.F.T.S. N° 20                Gurruchaga 739   \n",
-       "1005                           I.F.T.S. N° 20                Gurruchaga 739   \n",
-       "1006                           I.F.T.S. N° 20                Gurruchaga 739   \n",
-       "1007                           I.F.T.S. N° 20                Gurruchaga 739   \n",
-       "...                                       ...                           ...   \n",
-       "1054          Universidad Nacional de Córdoba      Av. Vélez Sarsfield 1611   \n",
-       "1846       Escuela Técnica N° 1 de Concepción  Nasif Estefano 100 y Shipton   \n",
-       "1845       Escuela Técnica N° 1 de Concepción  Nasif Estefano 100 y Shipton   \n",
-       "1203  I.P.E.T. y A. N °53 \"Fray Luis Beltrán\"     Av. Fray Luís Beltran 300   \n",
-       "509         UTN Facultad Regional Resistencia                    French 414   \n",
-       "\n",
-       "     llamado_certificacion  \n",
-       "966                 abr-18  \n",
-       "1004                abr-18  \n",
-       "1005                abr-18  \n",
-       "1006                abr-18  \n",
-       "1007                abr-18  \n",
-       "...                    ...  \n",
-       "1054                oct-17  \n",
-       "1846                oct-17  \n",
-       "1845                oct-17  \n",
-       "1203                oct-17  \n",
-       "509                 oct-17  \n",
-       "\n",
-       "[1933 rows x 9 columns]"
+       "array(['abr-18', 'ago-18', 'dic-17', 'dic-18', 'jun-18', 'jun-19',\n",
+       "       'mar-19', 'oct-17'], dtype=object)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset"
+    "dataset.llamado_certificacion.unique()"
    ]
   },
   {
