--- a/NotebooksResueltos/DS_Clase_10_Funciones_RESUELTO.ipynb
+++ b/NotebooksResueltos/DS_Clase_10_Funciones_RESUELTO.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,9 +31,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.par_o_impar(numero)>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "par_o_impar"
    ]
@@ -47,9 +58,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "par_o_impar() missing 1 required positional argument: 'numero'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-d9b36f92d792>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpar_o_impar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: par_o_impar() missing 1 required positional argument: 'numero'"
+     ]
+    }
+   ],
    "source": [
     "par_o_impar()"
    ]
@@ -63,9 +86,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Es impar\n",
+      "Es impar\n"
+     ]
+    }
+   ],
    "source": [
     "par_o_impar(numero = 9)\n",
     "par_o_impar(9)"
@@ -80,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,9 +129,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n",
+      "0.5\n"
+     ]
+    }
+   ],
    "source": [
     "division(4,2)\n",
     "division(divisor = 4, dividendo = 2)  #notar que asi no nos tenemos que preocupar por el orden"
@@ -114,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,9 +165,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.5\n",
+      "3.0\n",
+      "3.0\n",
+      "3.0\n"
+     ]
+    }
+   ],
    "source": [
     "division(9)\n",
     "division(9, 3) \n",
@@ -145,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,9 +217,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n"
+     ]
+    }
+   ],
    "source": [
     "print(resultado_division)"
    ]
@@ -181,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,9 +257,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2.0, 50)\n"
+     ]
+    }
+   ],
    "source": [
     "resultados = division_y_producto(10,5)\n",
     "print(resultados)"
@@ -214,9 +282,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0 50\n"
+     ]
+    }
+   ],
    "source": [
     "resultado_1, resultado_2 = division_y_producto(10,5)\n",
     "print(resultado_1, resultado_2)"
@@ -233,9 +309,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25.0\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'divisor' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-28655831cd39>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mvariable_auxiliar\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdivision\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m50\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdivisor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'divisor' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def division(dividendo, divisor = 2):\n",
     "    variable_auxiliar = dividendo/divisor\n",
@@ -246,9 +341,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.0\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "divisor = 5\n",
     "def division(dividendo):\n",
@@ -260,9 +364,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25.0\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "divisor = 5\n",
     "def division(dividendo, divisor = 2):\n",
@@ -290,9 +403,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.0"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lambda_division = lambda x,y: x/y\n",
     "lambda_division(80,10)"
@@ -324,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,9 +480,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function division_y_producto in module __main__:\n",
+      "\n",
+      "division_y_producto(numero_1, numero_2)\n",
+      "    Dados dos numeros, devuelve su division\n",
+      "    y su producto.\n",
+      "    \n",
+      "    Arguments:\n",
+      "    numero_1 -- dividendo, primer multiplicando\n",
+      "    numero_2 -- divisor, segundo multiplicando\n",
+      "    \n",
+      "    Returns:\n",
+      "    div -- la division entre los dos numeros\n",
+      "    prod -- el producto entre los dos numeros\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "help(division_y_producto)"
    ]
@@ -385,28 +530,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
     "def RMSE(arreglo_1, arreglo_2):\n",
-    "    '''\n",
-    "        Dados 2 arreglos, si los arreglos son:\n",
-    "            - Del mismo tamaño: Crea un arreglo con la resta de los 2 arreglos,\n",
-    "            eleva al cuadrado el arreglo creado, hallar el promedio de este arreglo,\n",
-    "            devuelve la raiz del resultado de la operacion anterior.\n",
-    "            - De distintos tamaños: Simplemente devuelve un string con: \n",
-    "            'Los arreglos tienen distinto tamaño'\n",
-    "        '''\n",
-    "    if len(arreglo_1) == len(arreglo_2):\n",
-    "        arreglo_3 = np.subtract(arreglo_1, arreglo_2)\n",
-    "        arreglo_3 = np.power(arreglo_3, 2)\n",
-    "        arreglo_3 = np.mean(arreglo_3)\n",
-    "        return np.sqrt(arreglo_3)\n",
-    "    \n",
-    "    return 'Los arreglos tienen distinto tamaño'\n"
+    "    if arreglo_1.size == arreglo_2.size:\n",
+    "        resta = (arreglo_1 - arreglo_2)**2\n",
+    "        suma = resta.sum()/resta.size\n",
+    "        return np.sqrt(suma)\n",
+    "    else:\n",
+    "        print('Error: no tienen el mismo tamaño')"
    ]
   },
   {
@@ -418,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +589,7 @@
        "7.487322618933954"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -496,18 +632,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Los arreglos tienen distinto tamaño'"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: no tienen el mismo tamaño\n"
+     ]
     }
    ],
    "source": [
@@ -527,32 +660,6 @@
    "source": [
     "2. Documentar brevemente la función creada."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function RMSE in module __main__:\n",
-      "\n",
-      "RMSE(arreglo_1, arreglo_2)\n",
-      "    Dados 2 arreglos, si los arreglos son:\n",
-      "        - Del mismo tamaño: Crea un arreglo con la resta de los 2 arreglos,\n",
-      "        eleva al cuadrado el arreglo creado, hallar el promedio de este arreglo,\n",
-      "        devuelve la raiz del resultado de la operacion anterior.\n",
-      "        - De distintos tamaños: Simplemente devuelve un string con: \n",
-      "        'Los arreglos tienen distinto tamaño'\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "help(RMSE)"
-   ]
   }
  ],
  "metadata": {
@@ -571,7 +678,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
