--- a/DsClases/DS_Clase_13_Outliers.ipynb
+++ b/DsClases/DS_Clase_13_Outliers.ipynb
@@ -125,7 +125,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a229a2390>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a23ad6f50>"
       ]
      },
      "execution_count": 3,
@@ -157,7 +157,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a22cf2e10>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a23e31a90>"
       ]
      },
      "execution_count": 4,
@@ -271,16 +271,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a24bab490>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a23f36a90>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -299,8 +299,7 @@
    ],
    "source": [
     "sns.distplot(data.Datos_Reescalados)\n",
-    "sns.distplot(data.Datos)\n",
-    "# "
+    "sns.distplot(data.Datos)"
    ]
   },
   {
@@ -314,25 +313,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.6279769872275214 6.360215379673109 2.7322383924455877 -0.47038060144086025 10.45857296834149\n"
+     ]
+    }
+   ],
    "source": [
-    "q25,q75 = COMPLETAR\n",
-    "iqr = COMPLETAR\n",
-    "minimo = COMPLETAR\n",
-    "maximo = COMPLETAR\n",
+    "q25,q75 = data.Datos.quantile(0.25), data.Datos.quantile(0.75) # np.percentile(data.Datos, [25, 75])\n",
+    "iqr = q75 - q25\n",
+    "minimo = q25 - (1.5 * iqr)\n",
+    "maximo = q75 + (1.5 * iqr)\n",
     "\n",
     "print(q25,q75,iqr, minimo, maximo)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "mascara_outliers = np.logical_or(COMPLETAR, COMPLETAR)\n",
+    "mascara_outliers = np.logical_or(data.Datos < minimo, data.Datos > maximo)\n",
     "mascara_outliers.sum()"
    ]
   },
