--- a/DsClases/Entrenamiento+y+testeo+de+modelos.ipynb
+++ b/DsClases/Entrenamiento+y+testeo+de+modelos.ipynb
@@ -19,11 +19,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "import numpy as np"
    ]
   },
   {
@@ -32,15 +33,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "X = 2 * np.random.rand(100, 1)\n",
-    "y = 4 + 3 * X + np.random.randn(100, 1)"
+    "import pandas as pd\n",
+    "pd.set_option('display.float_format', lambda x: '%.3f' % x)\n",
+    "path_dataset = '../csv/datos_properati_limpios_model.csv'\n",
+    "df = pd.read_csv(path_dataset)\n",
+    "X = df.drop(['price_aprox_usd'], axis=1)\n",
+    "y = df['price_aprox_usd']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,16 +52,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(75, 1)"
+       "(4782, 58)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +88,7 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +116,7 @@
        "             warm_start=False)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +142,7 @@
        "                      presort=False, random_state=None, splitter='best')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,14 +179,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE Entrenamiento:  0.9521260601314048 0.9795087320240042 0.0\n"
+      "RMSE Entrenamiento:  27064.519458431754 1.3494792885467549e+17 444.4881391458601\n"
      ]
     }
    ],
@@ -193,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,14 +219,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE Test:  0.9514343806199469 0.8919547651010717 1.3863142832560393\n"
+      "RMSE Test:  27482.455263162654 1.6598190487961208e+16 26041.29187603573\n"
      ]
     }
    ],
@@ -240,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,17 +265,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scores:  [ 1.00450413  1.43418889  0.82398722  1.86168847  1.3451405   1.42498436\n",
-      "  1.68718162  0.85915538  1.28682881  1.45539666]\n",
-      "Promedio:  1.31830560525\n",
-      "Desvío estandar:  0.320981238485\n"
+      "Scores:  [25339.22453217 27243.32809096 25223.16724183 26732.70099201\n",
+      " 26947.81912392 23558.49916086 25779.91505229 26263.47506927\n",
+      " 24570.37715809 26466.08160685]\n",
+      "Promedio:  25812.4588028271\n",
+      "Desvío estandar:  1095.8690296754773\n"
      ]
     }
    ],
@@ -284,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,17 +299,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scores:  [ 0.72566935  1.06293614  0.71441822  0.84863594  0.91317038  0.60831018\n",
-      "  0.88628346  0.66034842  1.07832003  1.37443581]\n",
-      "Promedio:  0.887252794028\n",
-      "Desvío estandar:  0.221846370252\n"
+      "Scores:  [ 27468.93645461 114554.12196814  28443.67000458  26749.37745925\n",
+      "  25923.27791784  26404.37832903  27493.83976055  27135.11648769\n",
+      "  27972.84446872  27882.4484708 ]\n",
+      "Promedio:  36002.80113211845\n",
+      "Desvío estandar:  26193.67912104112\n"
      ]
     }
    ],
@@ -314,6 +319,13 @@
     "print(\"Promedio: \", rmse_scores.mean())\n",
     "print(\"Desvío estandar: \", rmse_scores.std())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
