--- a/Practica/DS_Clase_17_KNN_RESUELTO.ipynb
+++ b/Practica/DS_Clase_17_KNN_RESUELTO.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,9 +34,193 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>hp</th>\n",
+       "      <th>hp+</th>\n",
+       "      <th>hp5</th>\n",
+       "      <th>hp5+</th>\n",
+       "      <th>mp</th>\n",
+       "      <th>mp+</th>\n",
+       "      <th>mp5</th>\n",
+       "      <th>mp5+</th>\n",
+       "      <th>ad</th>\n",
+       "      <th>ad+</th>\n",
+       "      <th>as</th>\n",
+       "      <th>as+</th>\n",
+       "      <th>ar</th>\n",
+       "      <th>ar+</th>\n",
+       "      <th>mr</th>\n",
+       "      <th>mr+</th>\n",
+       "      <th>ms</th>\n",
+       "      <th>rng</th>\n",
+       "      <th>clase</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Aatrox</td>\n",
+       "      <td>580.00</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>60.0000</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>0.651</td>\n",
+       "      <td>2.500</td>\n",
+       "      <td>38.00</td>\n",
+       "      <td>3.25</td>\n",
+       "      <td>32.1</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>345.0</td>\n",
+       "      <td>175.0</td>\n",
+       "      <td>fighter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Ahri</td>\n",
+       "      <td>526.00</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>418.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>8.000</td>\n",
+       "      <td>0.800</td>\n",
+       "      <td>53.0400</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>0.668</td>\n",
+       "      <td>2.000</td>\n",
+       "      <td>20.88</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>330.0</td>\n",
+       "      <td>550.0</td>\n",
+       "      <td>mage</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>Akali</td>\n",
+       "      <td>575.00</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>50.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>62.4000</td>\n",
+       "      <td>3.30</td>\n",
+       "      <td>0.625</td>\n",
+       "      <td>3.200</td>\n",
+       "      <td>23.00</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>345.0</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>assasin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>Alistar</td>\n",
+       "      <td>573.36</td>\n",
+       "      <td>106.0</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>350.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>8.500</td>\n",
+       "      <td>0.800</td>\n",
+       "      <td>61.1116</td>\n",
+       "      <td>3.62</td>\n",
+       "      <td>0.625</td>\n",
+       "      <td>2.125</td>\n",
+       "      <td>44.00</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>32.1</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>330.0</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>tank</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>Amumu</td>\n",
+       "      <td>613.12</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>287.2</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>7.382</td>\n",
+       "      <td>0.525</td>\n",
+       "      <td>53.3800</td>\n",
+       "      <td>3.80</td>\n",
+       "      <td>0.638</td>\n",
+       "      <td>2.180</td>\n",
+       "      <td>33.00</td>\n",
+       "      <td>3.80</td>\n",
+       "      <td>32.1</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>335.0</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>tank</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      name      hp    hp+  hp5  hp5+     mp   mp+     mp5   mp5+       ad  \\\n",
+       "0   Aatrox  580.00   90.0  3.0  1.00    0.0   0.0   0.000  0.000  60.0000   \n",
+       "1     Ahri  526.00   92.0  6.5  0.60  418.0  25.0   8.000  0.800  53.0400   \n",
+       "2    Akali  575.00   95.0  8.0  0.50  200.0   0.0  50.000  0.000  62.4000   \n",
+       "3  Alistar  573.36  106.0  8.5  0.85  350.0  40.0   8.500  0.800  61.1116   \n",
+       "4    Amumu  613.12   84.0  9.0  0.85  287.2  40.0   7.382  0.525  53.3800   \n",
+       "\n",
+       "    ad+     as    as+     ar   ar+    mr   mr+     ms    rng    clase  \n",
+       "0  5.00  0.651  2.500  38.00  3.25  32.1  1.25  345.0  175.0  fighter  \n",
+       "1  3.00  0.668  2.000  20.88  3.50  30.0  0.50  330.0  550.0     mage  \n",
+       "2  3.30  0.625  3.200  23.00  3.50  37.0  1.25  345.0  125.0  assasin  \n",
+       "3  3.62  0.625  2.125  44.00  3.50  32.1  1.25  330.0  125.0     tank  \n",
+       "4  3.80  0.638  2.180  33.00  3.80  32.1  1.25  335.0  125.0     tank  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data = [['fighter'], ['mage'], ['assasin'], ['tank'], ['tank'], ['mage'],\n",
     "       ['mage'], ['marksman'], ['mage'], ['mage'], ['mage'], ['tank'],\n",
@@ -67,7 +251,8 @@
     "clase = pd.DataFrame(data, columns = ['clase'])\n",
     "league = pd.concat([league, clase], axis=1)\n",
     "X = league.drop([\"clase\", 'name'], axis=1)\n",
-    "y = league.clase"
+    "y = league.clase\n",
+    "league.head(5)"
    ]
   },
   {
