--- a/DsClases/Clasificación+avanzada.ipynb
+++ b/DsClases/Clasificación+avanzada.ipynb
@@ -27,7 +27,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading 20news dataset. This may take a few minutes.\n",
+      "Downloading dataset from https://ndownloader.figshare.com/files/5975967 (14 MB)\n"
+     ]
+    }
+   ],
    "source": [
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
@@ -89,7 +98,7 @@
     {
      "data": {
       "text/plain": [
-       "0.92077230359520634"
+       "0.9207723035952063"
       ]
      },
      "execution_count": 4,
